fix blur bug on safari

--- a/src/app.css
+++ b/src/app.css
@@ -41,6 +41,14 @@ main {
   text-decoration: underline;
 } */
 
+/* // https://stackoverflow.com/questions/70138527/css-filter-blur-not-working-properly-on-safari */
+.blur-fix {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+}
+
 section {
   p {
     margin-top: 1em;
